--- a/ASP.NETMVC/GeneralProjectName/GeneralProjectName.Web/packages.config
+++ b/ASP.NETMVC/GeneralProjectName/GeneralProjectName.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac" version="4.6.2" targetFramework="net47" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net47" />
   <package id="Autofac.Owin" version="4.1.0" targetFramework="net47" />
+  <package id="AutoMapper" version="6.2.2" targetFramework="net47" />
   <package id="bootstrap" version="3.3.7" targetFramework="net47" />
   <package id="jQuery" version="3.2.1" targetFramework="net47" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net47" />
