--- a/ConsoleApplication/TestConsoleApplication/TestConsoleApplication/App.config
+++ b/ConsoleApplication/TestConsoleApplication/TestConsoleApplication/App.config
@@ -5,13 +5,13 @@
   </configSections>
   <log4net>
   <appender name="WebRollingFileAppender" type="log4net.Appender.RollingFileAppender">
-    <file value="C:\log\test.log" />
+    <file value="C:\log\AWS.log" />
     <appendToFile value="true"/>
     <rollingStyle value="Composite" />
     <datePattern value="yyyyMMdd" />
-    <maximumFileSize value="5MB" />
+    <maximumFileSize value="100MB" />
     <staticLogFileName value="true" />
-    <maxSizeRollBackups value="10" />
+    <maxSizeRollBackups value="100" />
     <layout type="log4net.Layout.PatternLayout">
       <header value="DateTime | Thread | Level | ClassName | Message&#13;&#10;" />
       <conversionPattern value="%date | %thread | %-5level | %logger | %message%newline" />
