--- a/SampleWeb/FrescoPlay/FrescoPlayTest/FrescoPlayTest.Web/Web.config
+++ b/SampleWeb/FrescoPlay/FrescoPlayTest/FrescoPlayTest.Web/Web.config
@@ -4,6 +4,29 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+    <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+  </configSections>
+  <log4net>
+    <appender name="WebRollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="C:\log\check.log"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Composite"/>
+      <datePattern value="yyyyMMdd"/>
+      <maximumFileSize value="10MB"/>
+      <staticLogFileName value="true"/>
+      <maxSizeRollBackups value="100"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <header value="DateTime | Thread | Level | ClassName | Message
+        "/>
+        <conversionPattern value="%date | %thread | %-5level | %logger | %message%newline"/>
+      </layout>
+    </appender>
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="WebRollingFileAppender"/>
+    </root>
+  </log4net>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
